refactor: applying more good practices on the Abrigo feature